--- a/src/components/bannerhome/carouselhome.scss
+++ b/src/components/bannerhome/carouselhome.scss
@@ -1,7 +1,9 @@
 .carousel-container {
   width: 98vw;
   margin: 3% auto; 
-  overflow-x: hidden;}
+  overflow-x: hidden;
+  margin-bottom: 500px;
+}
 
 .title{
   color: #278070;
@@ -38,7 +40,7 @@
 
 /* Personalize a cor dos pontos de navegação */
 .carousel .dot {
-  background-color: #00bcd4; /* Altere a cor conforme necessário */
+  background-color: #026d37; /* Altere a cor conforme necessário */
   border: 7px solid #00bcd4; /* Borda dos pontos */
 }
 
