--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,8 +1,76 @@
+/* Estilo do rodapé */
 .footer {
-    background-color: #176562;
-    height: 40vh;
-    width: 100%;
-    overflow-x: hidden; /* Oculta a barra de rolagem horizontal */
-}
-
-/* Certifique-se de que o conteúdo dentro da .footer não exceda a largura da tela */
+    background-color: #1d5a4f;
+    color: #ffffff;
+    padding: 40px 0;
+    font-size: 16px;
+  }
+  
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  .footer-logo {
+    width: 40%; /* Ajuste o tamanho do logo conforme necessário */
+  }
+  
+  .contact-info {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .contact-icon {
+    font-size: 24px;
+    margin-right: 10px;
+  }
+  
+  .footer-menu ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .footer-menu li {
+    margin-bottom: 10px;
+  }
+  
+  .footer-menu a {
+    color: #ffffff;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  
+  .footer-menu a:hover {
+    color: #ff9900; /* Cor de destaque ao passar o mouse */
+  }
+  
+  .footer-social ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    gap: 10px;
+  }
+  
+  .footer-social a {
+    color: #ffffff;
+    font-size: 24px;
+    text-decoration: none;
+  }
+  
+  @media (max-width: 768px) {
+    .footer-content {
+      flex-direction: column;
+      text-align: center;
+    }
+  
+    .footer-logo {
+      margin-bottom: 20px;
+    }
+  }
+  
