--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,7 +5,7 @@
 }
 
 .logo-header {
-  margin-right: 20px;
+  margin-left: 10%;
   max-width: 70%; /* Garante que a imagem não ultrapasse seu contêiner */
   height: auto; /* Mantém a proporção da imagem */
 }
