fix css bug, add router and pages

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,7 +3,9 @@
     background-color: #1d5a4f;
     color: #ffffff;
     padding: 40px 0;
+    width: 100vw;
     font-size: 16px;
+    font-family: cursive;
   }
   
   .footer-content {
@@ -12,7 +14,7 @@
     align-items: center;
     flex-wrap: wrap;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 0;
     padding: 0 20px;
   }
   
