--- a/src/components/home/testimonials/testimonials.scss
+++ b/src/components/home/testimonials/testimonials.scss
@@ -1,9 +1,3 @@
-/* testimonials.scss */
-body{
-    overflow-x: hidden;
-    
-}
-  
 .slick-list{
     overflow: visible !important;
 }
@@ -40,7 +34,7 @@ body{
     font-size: 1.2em;
     width: 80%;
     margin: auto;
-    text-align: justify;
+    text-align: start;
     margin-top: 10%;
     font-weight: 500;
     color: black;
