--- a/src/components/home/testimonials/testimonials.scss
+++ b/src/components/home/testimonials/testimonials.scss
@@ -16,7 +16,7 @@
     padding: 10px;
     margin-bottom: 70%;
     border: 2px solid #1d5a4f;
-    background: linear-gradient(#6ca79c, #597e73, #278070);
+    background: linear-gradient((45deg), #9bc5bd, #70a092, #4ba595);
     border-radius: 50px;
     height: 500px;
     position: relative; /* Para ajustar a posição da imagem */
