--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,3 +4,19 @@ body{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   overflow-x: hidden;
 }
+.slide-entering,
+.slide-exiting,
+.slide-entered,
+.slide-exited {
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide-entering,
+.slide-exiting {
+  transform: translateX(100%);
+}
+
+.slide-entered,
+.slide-exited {
+  transform: translateX(0);
+}
