--- a/src/components/home/testimonials/testimonials.scss
+++ b/src/components/home/testimonials/testimonials.scss
@@ -14,7 +14,7 @@
     width: 90% !important;
     text-align: center;
     padding: 10px;
-    margin-bottom: 70%;
+    margin-bottom: 40px;
     border: 2px solid #1d5a4f;
     background: linear-gradient((45deg), #9bc5bd, #70a092, #4ba595);
     border-radius: 50px;
