--- a/src/components/specialties/banner/specialtiesBanner.scss
+++ b/src/components/specialties/banner/specialtiesBanner.scss
@@ -7,6 +7,7 @@
     right: 0;
     left: 35%;
     z-index: 1;
+    margin-bottom: 150px;
   }
   
   .text-banner-spec {
@@ -15,4 +16,11 @@
     z-index: 2;
     width: 35vw;
     text-align: center;
+  }
+
+  .paragraph-specialties{
+    text-align: center;
+    padding: 10%;
+    font-size: 1.1em;
+    line-height: 2;
   }
