--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -81,10 +81,11 @@
 
 }
 
-.selected a {
-  color: #2f4d4d !important;
+.page a {
+  color: #bdbaba !important;
 }
 .nav {
+  background-color: #278070;
   display: flex;
   justify-content: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -102,18 +103,18 @@
 
       a {
         text-decoration: none;
-        color: #35997b;
+        color: white;
         font-weight: bold;
         position: relative;
 
         &:before {
           content: '';
           position: absolute;
-          bottom: 0;
+          bottom: -5px;
           left: 0;
           width: 100%;
           height: 2px;
-          background-color: #278070; // Cor da linha de animação
+          background-color: white; // Cor da linha de animação
           transform: scaleX(0); // Inicialmente, a linha de animação tem largura zero
           transform-origin: right;
           transition: transform 0.3s ease-in-out; // Adiciona uma transição suave
