--- a/src/components/home/testimonials/testimonials.scss
+++ b/src/components/home/testimonials/testimonials.scss
@@ -15,6 +15,8 @@
     text-align: center;
     padding: 10px;
     margin-bottom: 40px;
+    margin-top: 15%;
+    margin-left: 2.6%;
     border: 2px solid #1d5a4f;
     background: linear-gradient((45deg), #9bc5bd, #70a092, #4ba595);
     border-radius: 50px;
@@ -37,7 +39,7 @@
     text-align: start;
     margin-top: 10%;
     font-weight: 500;
-    color: black;
+    color: white;
 }
 
 .image-testimonial img {
