--- a/src/components/specialties/specialties/specialties.scss
+++ b/src/components/specialties/specialties/specialties.scss
@@ -1,14 +1,28 @@
 .specialties-container {
     display: flex;
+    
     flex-wrap: wrap;
     justify-content: center;
+    background-color: rgb(207, 206, 206);
   }
+
+  .specs-title{
+  text-align: center;
+  color: white;
+  font-weight: 700;
+  margin: 0;
+  margin-top: 33.4%;
+  font-size: 2em;
+  background-color: #6bafaf;
+  line-height: 2em;
+}
   
   .item-specialties {
     background-color: #4c8883;
     text-align: center;
-    width: calc(33.33% - 20px);
-    margin: 10px;
+    cursor: pointer;
+    width: 40%;
+    margin: 3%;
     border-radius: 20px;
     min-height: 300px;
     display: flex;
@@ -26,34 +40,26 @@
   }
   
   .image-specialties img {
-    border-radius: 50%;
-    width: 20vw;
+    border-radius: 15%;
+    width: 100%;
     height: auto;
+    position: relative;
     margin-bottom: 10px;
   }
   .name-specialties{
     font-weight: 900;
-    color: white;
+    color: #122120;
+    font-family: cursive;
     font-size: 1.2em;
   }
   
   .text-specialties {
     font-size: 16px;
-    color: black;
+    color: white;
     font-weight: 600;
     line-height: 1.4;
   }
   
-  /* Adicione uma media query para telas pequenas */
-  @media (max-width: 768px) {
-    .specialties-container {
-      flex-direction: column;
-      align-items: center;
-    }
+
   
-    .item-specialties {
-      width: 100%;
-      margin: 10px 0;
-    }
-  }
   
