--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,8 +3,9 @@
   background-color: #1d5a4f;
   color: #ffffff;
   padding: 40px 0;
-  width: 100vw;
+  width: 100%;
   font-size: 16px;
+  text-align: justify;
   position: relative;
   bottom: 0;
   font-family: cursive;
@@ -14,13 +15,14 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 1200px;
+    max-width: 100vw;
     margin: 0;
-    padding: 0 20px;
+    padding: 0 6% 0 6%;
   }
   
   .footer-logo {
-    width: 40%; /* Ajuste o tamanho do logo conforme necessário */
+    width: 25%; /* Ajuste o tamanho do logo conforme necessário */
+    min-width: 300px;
   }
   
   .contact-info {
@@ -40,7 +42,7 @@
   }
   
   .footer-menu li {
-    margin-bottom: 10px;
+    margin-bottom: 20%;
   }
   
   .footer-menu a {
@@ -66,7 +68,7 @@
     text-decoration: none;
   }
   
-  @media (max-width: 768px) {
+  @media (max-width: 1020px) {
     .footer-content {
       flex-direction: column;
       text-align: center;
