fix responsive banner home

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,5 @@
 .container-header {
+  background-color: #d5f5f5;
   display: grid;
   align-items: center;
   grid-template-columns: 60% 1fr; /* Duas colunas: 60% para a imagem e o restante para outros elementos */
