--- a/src/components/home/bannerhome/carouselhome.scss
+++ b/src/components/home/bannerhome/carouselhome.scss
@@ -15,6 +15,7 @@
   font-size: 1.2em; /* Use vw para ajustar o tamanho da fonte em relação à largura da tela */
 }
 .image img {
+  opacity: .6;
   height: 100% !important;
   width: auto !important;
 }
