--- a/src/components/home/testimonials/testimonials.scss
+++ b/src/components/home/testimonials/testimonials.scss
@@ -3,9 +3,10 @@
 }
 .titleTestimonials{
     font-size: 2em;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 10%;
     color: #1d5a4f;
     margin-left: 5%;
+    font-weight: 900;
     margin-bottom: 4%;
 }
    
