--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,7 +3,7 @@
   background-color: #1d5a4f;
   color: #ffffff;
   padding: 40px 0;
-  width: 100%;
+  width: 100vw;
   font-size: 16px;
   text-align: justify;
   position: relative;
@@ -15,14 +15,17 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 100vw;
+    width: 90vw;
     margin: 0;
     padding: 0 6% 0 6%;
   }
   
-  .footer-logo {
-    width: 25%; /* Ajuste o tamanho do logo conforme necessário */
-    min-width: 300px;
+  .footer-logo{
+    width: 25vw; /* Ajuste o tamanho do logo conforme necessário */
+    min-width: 350px;
+  }
+  .footer-logo img{
+    width: 120%;
   }
   
   .contact-info {
@@ -35,6 +38,10 @@
   .contact-icon {
     font-size: 24px;
     margin-right: 10px;
+  }
+
+  .footer-menu{
+    display: flex;
   }
   
   .footer-menu ul {
