--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,155 +1,32 @@
 .container-header {
-  background-color: #d5f5f5;
-  display: grid;
+  padding: 10px 30px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  grid-template-columns: 60% 1fr; /* Duas colunas: 60% para a imagem e o restante para outros elementos */
+
+}
+.container-header .logo-header{
+  width: 220px;
 }
 
-.logo-header {
-  margin-left: 10%;
-  width: 60%; /* Garante que a imagem não ultrapasse seu contêiner */
-  height: auto; /* Mantém a proporção da imagem */
-}
-
-@media (max-width: 900px) {
-  .logo-header{
-    width: 100%;
-  }
-
-  .text-portal
-  {
-    display: none;
-  }
-}
-
-.button-container-portal {
-  position: relative;
-  grid-column: 2;
-}
-
-
-
-.hover-button-portal {
-  background-color: #6bafaf;
-  padding: 20px;
-  border-radius: 50%; /* Usar 50% para um círculo perfeito */
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  position: relative;
-  z-index: 2;
-  margin-left: 50%;
-  font-size: 1.5em; /* Tamanho de fonte responsivo */
-}
-
-.text-portal {
-  position: absolute;
-  left: 11%; /* Ajustado para uma posição mais responsiva */
-  font-size: 1em; /* Tamanho de fonte responsivo */
-  width: 40%; /* Ajustado para uma posição mais responsiva */
-  background-color: #4f8181;
-  color: #fff;
-  transition: left 0.3s ease, opacity 0.3s ease;
-  z-index: 1;
-  top: 50%; /* Centralizado verticalmente */
-  transform: translateY(-50%); /* Centralizado verticalmente */
-  padding: 10px 20px;
-  border-radius: 50px; /* Bordas arredondadas */
-}
-
-.button-icon-portal {
-  color: white;
+.navbar-menu{
   display: flex;
-  font-size: 100%;
+  list-style: none;
+  gap: 50px;
+  color: #49557e;
+  font-size: 16px;
+  margin-left: -26%;
+  font-family: var(--mc-typography-font-family-sans);
 }
 
-.button-container-portal:hover .hover-button-portal {
-  animation: rotate .5s ease;
-  
-}
-
-@keyframes rotate {
-  100% {
-    transform: rotate(360deg);
-  }
-
-}
-
-.page a {
-  color: #bdbaba !important;
-}
-.nav {
-  background-color: #278070;
+.navbar-right{
   display: flex;
-  justify-content: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding: 0 0 0 5%;
-  text-align: left;
-
-  ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-
-    li {
-      display: inline;
-      margin-right: 20px;
-
-      a {
-        text-decoration: none;
-        color: white;
-        font-weight: bold;
-        position: relative;
-
-        &:before {
-          content: '';
-          position: absolute;
-          bottom: -5px;
-          left: 0;
-          width: 100%;
-          height: 2px;
-          background-color: white; // Cor da linha de animação
-          transform: scaleX(0); // Inicialmente, a linha de animação tem largura zero
-          transform-origin: right;
-          transition: transform 0.3s ease-in-out; // Adiciona uma transição suave
-        }
-
-        &:hover {
-          &:before {
-            transform: scaleX(1); // Aumenta a largura da linha de animação no hover
-            transform-origin: left;
-          }
-        }
-      }
-    }
-  }
-}
-.titlenavbar{
-  cursor: pointer;
-  color: white;
-  font-weight: bold;
-  display: none;
-}
-.titlenavbar:hover{
-  color: #bdbaba;
-
+  align-items: center;
+  gap: 40px;
 }
 
-@media (max-width: 850px) {
-  .titlenavbar{
-    display: flex;
-  }
-  .nav ul {
-    display: none;
-  }
-  .nav-list a{
-    display: block;
-    text-align: center;
-  }
-
-
-}
-.nav ul.active {
-  display: block;
-  
+.button-login{
+  display: flex;
+  align-items: center;
+  gap: 6px;
 }
